Add change pages
*Modified button click
*Small fix

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="secret_word">
                 <h3>Введите кодовое слово</h3>
                 <input type="text">
-                <button>Подтвердить</button>
+                <button>Поехали!</button>
             </div>
         </div>
     </div>
