--- a/group_red/index.html
+++ b/group_red/index.html
@@ -1,22 +1,85 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quest</title>
-    <link rel="stylesheet" href="../style.css">
-    <link rel="stylesheet" href="style_red.css">
-    <!-- <script src="js.js" defer></script> -->
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Quest</title>
+	<link rel="stylesheet" href="../style.css">
+	<link rel="stylesheet" href="style_red.css">
+	<script src="https://kit.fontawesome.com/c4d4c37692.js" crossorigin="anonymous"></script>
+	<script src="red.js" defer></script>
 </head>
+
 <body>
-    <div class="quest">
-        <div class="container">
-            <div class="secret_word">
-                <h3>Введите кодовое слово</h3>
-                <input type="text">
-                <button>Подтвердить</button>
-            </div>
-        </div>
-    </div>
+	<div class="quest">
+		<div class="container">
+			<h2>Вас ждут в кабинете №</h2>
+			<div class="classrooms">
+				<div class="arrow stage_1">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_1">
+					<div class="class_body ">
+						<p>101</p>
+					</div>
+				</div>
+				<div class="arrow stage_2">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_2">
+					<div class="class_body ">
+						<p>102</p>
+					</div>
+				</div>
+				<div class="arrow stage_3">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_3">
+					<div class="class_body">
+						<p>103</p>
+					</div>
+				</div>
+				<div class="arrow stage_4">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_4">
+					<div class="class_body ">
+						<p>104</p>
+					</div>
+				</div>
+				<div class="arrow stage_5">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_5">
+					<div class="class_body">
+						<p>105</p>
+					</div>
+				</div>
+				<div class="arrow stage_6">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_6">
+					<div class="class_body stage_6">
+						<p>106</p>
+					</div>
+				</div>
+				<div class="arrow stage_7">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_7">
+					<div class="class_body stage_7">
+						<p>107</p>
+					</div>
+				</div>
+			</div>
+			<div class="secret_word">
+				<h3>Введите кодовое слово</h3>
+				<input type="text">
+				<button>Подтвердить</button>
+			</div>
+		</div>
+	</div>
 </body>
+
 </html>
