--- a/index.html
+++ b/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quest</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="js.js" defer></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Quest</title>
+	<link rel="stylesheet" href="style.css">
+	<script src="https://kit.fontawesome.com/c4d4c37692.js" crossorigin="anonymous"></script>
+	<script src="js.js" defer></script>
 </head>
+
 <body>
-    <div class="quest">
-        <div class="container">
-            <div class="secret_word">
-                <h3>Введите кодовое слово</h3>
-                <input type="text">
-                <button>Поехали!</button>
-            </div>
-        </div>
-    </div>
+	<div class="quest">
+		<div class="container" style="align-content: center;">
+			<div class="secret_word">
+				<h3>Введите кодовое слово</h3>
+				<input type="text">
+				<button>Поехали!</button>
+			</div>
+		</div>
+	</div>
 </body>
+
 </html>
