Modify group_red page
*Fix some bugs
*Modify red.js

--- a/group_red/index.html
+++ b/group_red/index.html
@@ -20,7 +20,7 @@
 					<span class="fas fa-arrow-down"></span>
 				</div>
 				<div class="class stage_1">
-					<div class="class_body ">
+					<div class="class_body">
 						<p>101</p>
 					</div>
 				</div>
@@ -28,7 +28,7 @@
 					<span class="fas fa-arrow-down"></span>
 				</div>
 				<div class="class stage_2">
-					<div class="class_body ">
+					<div class="class_body">
 						<p>102</p>
 					</div>
 				</div>
@@ -44,7 +44,7 @@
 					<span class="fas fa-arrow-down"></span>
 				</div>
 				<div class="class stage_4">
-					<div class="class_body ">
+					<div class="class_body">
 						<p>104</p>
 					</div>
 				</div>
@@ -60,7 +60,7 @@
 					<span class="fas fa-arrow-down"></span>
 				</div>
 				<div class="class stage_6">
-					<div class="class_body stage_6">
+					<div class="class_body">
 						<p>106</p>
 					</div>
 				</div>
@@ -68,8 +68,16 @@
 					<span class="fas fa-arrow-down"></span>
 				</div>
 				<div class="class stage_7">
-					<div class="class_body stage_7">
+					<div class="class_body">
 						<p>107</p>
+					</div>
+				</div>
+				<div class="arrow stage_8">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_8">
+					<div class="class_body">
+						<p>Столовая</p>
 					</div>
 				</div>
 			</div>
@@ -77,6 +85,10 @@
 				<h3>Введите кодовое слово</h3>
 				<input type="text">
 				<button>Подтвердить</button>
+			</div>
+			<div class="remember">
+				<h4>И не забудь свою секретную фразу:</h4>
+				<p>Ты в пятый раз, одетый в форму, спешишь начать еще один учебный год!</p>
 			</div>
 		</div>
 	</div>
