--- a/group_red/index.html
+++ b/group_red/index.html
@@ -4,10 +4,11 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Quest</title>
+	<title>Команда красных</title>
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="style_red.css">
 	<script src="https://kit.fontawesome.com/c4d4c37692.js" crossorigin="anonymous"></script>
+	<script src="../functions.js" defer></script>
 	<script src="red.js" defer></script>
 </head>
 
@@ -89,6 +90,11 @@
 			<div class="remember">
 				<h4>И не забудь свою секретную фразу:</h4>
 				<p>Ты в пятый раз, одетый в форму, спешишь начать еще один учебный год!</p>
+			</div>
+			<div class="bg_layer"></div>
+			<div class="modal_error">
+				<h4>Неверный код!!!</h4>
+				<button>Закрыть</button>
 			</div>
 		</div>
 	</div>
