rewrite blue, brown, green, white, yellow, pages

--- a/group_yellow/index.html
+++ b/group_yellow/index.html
@@ -4,19 +4,97 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Quest</title>
+	<title>Команда желтых</title>
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="style_yellow.css">
-	<!-- <script src="js.js" defer></script> -->
+	<script src="https://kit.fontawesome.com/c4d4c37692.js" crossorigin="anonymous"></script>
+	<script src="../functions.js" defer></script>
+	<script src="yellow.js" defer></script>
 </head>
 
 <body>
 	<div class="quest">
 		<div class="container">
+			<h2>Вас ждут в кабинете №</h2>
+			<div class="classrooms">
+				<div class="arrow stage_1">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_1">
+					<div class="class_body">
+						<p>101</p>
+					</div>
+				</div>
+				<div class="arrow stage_2">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_2">
+					<div class="class_body">
+						<p>102</p>
+					</div>
+				</div>
+				<div class="arrow stage_3">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_3">
+					<div class="class_body">
+						<p>103</p>
+					</div>
+				</div>
+				<div class="arrow stage_4">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_4">
+					<div class="class_body">
+						<p>104</p>
+					</div>
+				</div>
+				<div class="arrow stage_5">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_5">
+					<div class="class_body">
+						<p>105</p>
+					</div>
+				</div>
+				<div class="arrow stage_6">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_6">
+					<div class="class_body">
+						<p>106</p>
+					</div>
+				</div>
+				<div class="arrow stage_7">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_7">
+					<div class="class_body">
+						<p>107</p>
+					</div>
+				</div>
+				<div class="arrow stage_8">
+					<span class="fas fa-arrow-down"></span>
+				</div>
+				<div class="class stage_8">
+					<div class="class_body">
+						<p>Столовая</p>
+					</div>
+				</div>
+			</div>
 			<div class="secret_word">
 				<h3>Введите кодовое слово</h3>
 				<input type="text">
 				<button>Подтвердить</button>
+			</div>
+			<div class="remember">
+				<h4>И не забудь свою секретную фразу:</h4>
+				<p>В пятом классе учиться ты начинаешь, к новым знаниям путь открываешь!</p>
+			</div>
+			<div class="bg_layer"></div>
+			<div class="modal_error">
+				<h4>Неверный код!!!</h4>
+				<button>Закрыть</button>
 			</div>
 		</div>
 	</div>
