--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<title>Quest</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://kit.fontawesome.com/c4d4c37692.js" crossorigin="anonymous"></script>
+	<script src="functions.js" defer></script>
 	<script src="js.js" defer></script>
 </head>
 
@@ -17,6 +18,11 @@
 				<h3>Введите кодовое слово</h3>
 				<input type="text">
 				<button>Поехали!</button>
+			</div>
+			<div class="bg_layer"></div>
+			<div class="modal_error">
+				<h4>Неверный код!!!</h4>
+				<button>Закрыть</button>
 			</div>
 		</div>
 	</div>
