--- a/group_yellow/index.html
+++ b/group_yellow/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Команда желтых</title>
+	<title>Команда с желтыми крышками</title>
 	<link rel="stylesheet" href="../style.css">
 	<link rel="stylesheet" href="style_yellow.css">
 	<script src="https://kit.fontawesome.com/c4d4c37692.js" crossorigin="anonymous"></script>
@@ -22,7 +22,7 @@
 				</div>
 				<div class="class stage_1">
 					<div class="class_body">
-						<p>101</p>
+						<p>303</p>
 					</div>
 				</div>
 				<div class="arrow stage_2">
@@ -30,7 +30,7 @@
 				</div>
 				<div class="class stage_2">
 					<div class="class_body">
-						<p>102</p>
+						<p>спортзал</p>
 					</div>
 				</div>
 				<div class="arrow stage_3">
@@ -38,7 +38,7 @@
 				</div>
 				<div class="class stage_3">
 					<div class="class_body">
-						<p>103</p>
+						<p>403</p>
 					</div>
 				</div>
 				<div class="arrow stage_4">
@@ -46,7 +46,7 @@
 				</div>
 				<div class="class stage_4">
 					<div class="class_body">
-						<p>104</p>
+						<p>402</p>
 					</div>
 				</div>
 				<div class="arrow stage_5">
@@ -54,7 +54,7 @@
 				</div>
 				<div class="class stage_5">
 					<div class="class_body">
-						<p>105</p>
+						<p>306</p>
 					</div>
 				</div>
 				<div class="arrow stage_6">
@@ -62,7 +62,7 @@
 				</div>
 				<div class="class stage_6">
 					<div class="class_body">
-						<p>106</p>
+						<p>406</p>
 					</div>
 				</div>
 				<div class="arrow stage_7">
@@ -70,7 +70,7 @@
 				</div>
 				<div class="class stage_7">
 					<div class="class_body">
-						<p>107</p>
+						<p>404</p>
 					</div>
 				</div>
 				<div class="arrow stage_8">
