--- a/group_black/index.html
+++ b/group_black/index.html
@@ -78,7 +78,7 @@
 				</div>
 				<div class="class stage_8">
 					<div class="class_body">
-						<p>Столовая</p>
+						<p>Актовый зал</p>
 					</div>
 				</div>
 			</div>
